About Blood First Draft

--- a/blood_donation.tex
+++ b/blood_donation.tex
@@ -3,16 +3,103 @@
 \chapter{Εθελοντική αιμοδοσία}\label{ch:Βlood Donations}
 
 \section{Εθελοντική αιμοδοσία}
-	\subsection{Εισαγωγή}
-	Το αίμα είναι το σπουδαιότερο βιολογικό υγρό του ανθρώπινου οργανισμού και αποτελεί ένα ανεκτίμητο προϊόν ζωής. Χωρίς της επαρκή ποσότητα αίματος, τα κύτταρα του ανθρώπινου σώματος δεν μπορούν να λάβουν το οξυγόνο και τα θρεπτικά συστατικά που τους είναι απαραίτητα για να επιβιώσουν \cite{aboutBlood}. Επιπλέον το σώμα δεν θα μπορούσε να αντιμετωπίσει βλαπτικούς παράγοντες, να αποβάλει τοξικά προϊόντα και να ρυθμίσει τις παραμέτρους του εσωτερικού του περιβάλλοντος \cite{circulatorySystem}. Αν και η τεράστια αξία και χρησιμότητα του αίματος είναι αδιαμφισβήτητη η ύπαρξη αρκετών εθελοντικών αιμοδοσιών για να καλυφθούν οι ανάγκες για αίμα αποτελεί μείζων πρόβλημα.
+	Στο παρόν κεφάλαιο αναλύουμε τις βασικές έννοιες σχετικά με την αιμοδοσία οι οποίες εμπλέκονται στο θέμα της παρούσας διπλωματικής εργασίας.
+	\subsection{Το αίμα}
+	Το αίμα είναι το σπουδαιότερο βιολογικό υγρό του ανθρώπινου οργανισμού και αποτελεί ένα ανεκτίμητο προϊόν ζωής, το οποίο δεν μπορεί να κατασκευαστεί με συνθετικό τρόπο. Χωρίς της επαρκή ποσότητα αίματος, τα κύτταρα του ανθρώπινου σώματος δεν μπορούν να λάβουν το οξυγόνο και τα θρεπτικά συστατικά που τους είναι απαραίτητα για να επιβιώσουν \cite{aboutBlood}. Επιπλέον το σώμα δεν θα μπορούσε να αντιμετωπίσει βλαπτικούς παράγοντες, να αποβάλει τοξικά προϊόντα και να ρυθμίσει τις παραμέτρους του εσωτερικού του περιβάλλοντος \cite{circulatorySystem}. Αν και η τεράστια αξία και χρησιμότητα του αίματος είναι αδιαμφισβήτητη η ύπαρξη αρκετών εθελοντικών αιμοδοσιών για να καλυφθούν οι ανάγκες για αίμα αποτελεί μείζων πρόβλημα.
 	
+	Το αίμα αποτελείται από ερυθρά αιμοσφαίρια, λευκά αιμοσφαίρια, αιμοπετάλια τα οποία εναιωρούνται μέσα στο πλάσμα και πρωτεΐνες. Στο σχήμα \ref{fig:basic_blood_diagram}  παρακάτω παρουσιάζονται τα διάφορα συστατικά από τα οποία αποτελείται το αίμα:
+	\begin{figure}[h]
+	    \centering
+	    \includegraphics[width=0.7\textwidth]{basic_blood_diagram.jpg}
+	    \caption{Συστατικά του αίματος}
+	    \label{fig:basic_blood_diagram}
+	\end{figure}
+	 
+	Το πλάσμα αποτελεί το μεγαλύτερο και κύριο συστατικό του αίματος, καταλαμβάνοντας το 55\% του συνολικού όγκου του. Είναι ένα υποκίτρινο υγρό μέσω του οποίου μεταφέρονται αιμοσφαίρια, πρωτεΐνες και άλλες ουσίες. Αποτελείται κατά 91,5\% από νερό, κατά 7\% από πρωτεΐνες, όπως η λευκωματίνη (αλβουμίνη), οι σφαιρίνες και το ινωδογόνο, και κατά 1,5\% από άλλες ουσίες, όπως θρεπτικά συστατικά, ορμόνες, αναπνευστικά αέρια, ηλεκτρολύτες, βιταμίνες και άχρηστες αζωτούχες ουσίες \cite{bloodPlasma}. Η κύρια λειτουργία που επιτελεί είναι η μεταφορά υγρών και υδατοδιάλυτων ουσιών όπως είναι οι ορμόνες και βασικές .
+
+	Το υπόλοιπο 45\% του αίματος αποτελείται από αιμοσφαίρια και κυρίως ερυθρά αιμσοφαίρια, λευκά αιμοσφαίρια και αιμοπετάλια. Στο σχήμα \ref{fig:blood_cells_characteristics} παρακάτω βλέπουμε τα βασικά χαρακτηριστικά για τα κύτταρα του αίματος.
+\begin{figure}[H]
+	    \centering
+	    \includegraphics[width=0.7\textwidth]{blood_cells_characteristics.jpg}
+	    \caption{Χαρακτηριστικά των κυττάρων του αίματος}
+	    \label{fig:blood_cells_characteristics}
+\end{figure}
+
+	Τα κύτταρα του αίματος ανανεώνονται συνεχώς, όπως φαίνεται από τη διάρκεια ζωής στο αίμα των ερυθρών αιμοσφαιρίων (120 ημέρες), των αιμοπεταλίων (10 ημέρες) και των κοκκιοκυττάρων (9 ώρες). Ο χρόνος ζωής των λεμφοκυττάρων (Τ και Β κυττάρων) ποικίλλει εξαιρετικά από ώρες έως χρόνια. Η παραγωγή ενεργών κυττάρων του αίματος λαμβάνει χώρα κατά κύριο λόγο στο μυελό των οστών. Ωστόσο ο σπλήνας, οι λεμφαδένες και οι βοηθητικοί λεμφοειδείς ιστοί είναι επίσης θέσεις συνεχιζόμενης παραγωγής κυττάρων, κυρίως λεμφικής σειράς \cite{textbookOfMedicine}.
+	
+	Ένας υγιής ενήλικας έχει περίπου 5-6 λίτρα αίματος \cite{bloodVolume}, και μπορεί να υποστεί απώλεια 500 ml χωρίς να υποστεί προβλήματα υγείας και να χρειαστεί κάποια μετάγγιση αίματος. Βέβαια άμα υποστεί απώλεια της τάξης των 1000-1500 ml σε μικρό χρονικό διάστημα ή κάποια συστατικά του αίματος (αιμοπετάλια, ερυθρά αιμοσφαίρια) είναι κάτω από τα απαιτούμενα επίπεδα λόγω ασθένειας (καρκίνος, αναιμία κτλπ) ή λόγω κάποιας εγχείρησης, τότε χρειάζεται μετάγγιση αίματος \cite{Stainsby01092000}.
+		\subsubsection{Ομάδες αίματος και συμβατότητα}	
+			Στην επιφάνεια του ερυθρού αιμοσφαιρίου υπάρχουν διάφορα αντιγόνα ή ουσίες των ομάδων αίματος (blood group substances). Σήμερα είναι γνωστά 23 συστήματα ομάδων αίματος, γενετικά ανεξάρτητα το ένα από το άλλο. Κληρονομούνται σύμφωνα με τους νόμους του Mendel και η γνώση τους είναι εξαιρετικά χρήσιμη στην Ιατροδικαστική (έλεγχος πατρότητας), σε ανθρωπολογικές μελέτες αλλά κυρίως για τη σωστή και ασφαλή μετάγγιση αίματος στην κλινική πράξη \cite{dawkins}. Κάθε σύστημα ομάδων αίματος περιλαμβάνει μία σειρά αντιγόνων που σχετίζονται ως προς τη δομή. Συνολικά, τα συστήματα αυτά περιλαμβάνουν περισσότερα από 400 αντιγόνα. Οι ουσίες των ομάδων αίματος δεν περιορίζονται μόνο στη μεμβράνη των ερυθρών αιμοσφαιρίων αλλά βρίσκονται ακόμη σε κύτταρα πολλών ιστών καθώς και σε υγρά του σώματος, όπως σάλιο, γαστρικό υγρό, σπέρμα, ούρα, και γάλα. Τα συστήματα ομάδας αίματος συμπεριλαμβάνουν τα ΑΒΟ, τα Rh, MNS, Kell, Duffy, Kidd και άλλα.
+			
+			Το πιο γνωστό και πιο ευρείας χρήσης είναι το σύστημα ΑΒΟ. Είναι το πρώτο σύστημα που ανακαλύφθηκε το 1900 από τον Landsteiner (Βραβείο Νομπέλ Ιατρικής 1930). Η ανακάλυψη αυτή άνοιξε το δρόμο για την ασφαλή μετάγγιση αίματος. Το σύστημα ΑΒΟ εξακολουθεί και σήμερα να είναι το πιο σημαντικό στη μετάγγιση. Το σύστημα συνδέεται με τρία αντιγόνα Α, Β και Η. Το σύστημα χαρακτηρίζεται από την παρουσία ή την απουσία στα ερυθρά αιμοσφαίρια των αντιγόνων (συγκολλητινογόνων). Με συνδυασμό αυτών διακρίνονται τέσσερις ομάδες αίματος, η ΑΒ, η Α, η Β, και η Ο. Η ομάδα ΑΒ χαρακτηρίζεται από την παρουσία στα ερυθρά αιμοσφαίρια και των δύο αντιγόνων Α και Β. Η ομάδα Α χαρακτηρίζεται από την παρουσία του αντιγόνου Α. Η ομάδα Β χαρακτηρίζεται από την παρουσία του αντιγόνου Β. Τέλος η ομάδα Ο δεν περιέχει κανένα από τα αντιγόνα Α ή Β, αλλά περιέχει το αντιγόνο Η. Το τελευταίο υπάρχει σε όλες τις ομάδες αλλά ιδιαιτέρως παρατηρείται στην ομάδα Ο.
+			
+			Στον ορό του αίματος των διαφόρων ατόμων παρατηρούνται φυσιολογικές συγκολλητίνες ομόλογοι των συγκολλητινογόνων Α και Β. Οι φυσιολογικές συγκολλητίνες είναι οι α (anti- A) και οι β (anti-B). Στον ορό δεν υπάρχει ποτέ η συγκολλητίνη η ομόλογος προς το συγκολλητινογόνο που υπάρχει στα ερυθρά αιμοσφαίρια του ιδίου ατόμου. Έτσι στον ορό του αίματος ΑΒ δεν υπάρχει καμία συγκολλητίνη. Στον ορό της ομάδας Α υπάρχει η συγκολλητίνη anti-B ή β. Στον ορό της ομάδας Β υπάρχει η συγκολλητίνη anti-Α ή α. Τέλος στον ορό της ομάδας Ο υπάρχουν και οι δύο συγκολλητίνες α και β. Η συγκολλητίνη α αντιδρά με το συγκολλητινιγόνο Α και η συγκολλητίνη β αντιδρά με το συγκολλητινιγόνο Β. Εάν επομένως σε μία μετάγγιση αίματος ο ορός του ασθενούς (δέκτη) έχει συγκολλητίνες (α ή β, α και β), τότε αυτές θα συγκολλήσουν τα ερυθρά αιμοσφαίρια του δότη, όταν στα αιμοσφαίρια αυτά υπάρχουν συγκολλητινογόνα Α ή Β ή Α και Β. Στην περίπτωση αυτή τα συγκολλημένα ερυθρά αιμοσφαίρια μπορεί να προκαλέσουν ακόμη και το θάνατο του δέκτη. Στο σχήμα \ref{fig:blood_antibodies_antigons} φαίνονται συγκεντρωτικά τα στοιχεία που αναλύσαμε παραπάνω.		
+	\begin{figure}[h!]
+	    \centering
+	    \includegraphics[width=0.7\textwidth]{blood_antibodies_antigons.jpg}
+	    \caption{Αντισώματα και αντιγόνα του αίματος}
+	    \label{fig:blood_antibodies_antigons}
+	\end{figure}
+			
+			Στις μεταγγίσεις πρέπει να λαμβάνεται υπόψη και ένας άλλος
+παράγοντας, που λέγεται παράγοντας Rhesus, επειδή ανακαλύφθηκε πρώτα στα ερυθρά
+αιμοσφαίρια του πιθήκου Rhesus Maccacus. Το σύστημα Rhesus είναι το δεύτερο κατά
+σπουδαιότητα σύστημα ομάδων αίματος μετά το ΑΒΟ. Η γνώση του είναι απαραίτητη για
+την ασφαλή μετάγγιση αίματος, ενώ είναι το σύστημα, που κυρίως ευθύνεται για την
+αιμολυτική νόσο του νεογνού. Σήμερα είναι γνωστά περί τα 40 αντιγόνα που ανήκουν στο
+σύστημα Rhesus. Από αυτά τα πέντε είναι τα κύρια και βασικά. Το κυριότερο αντιγόνο είναι
+το D και άτομα που το έχουν στα ερυθρά αιμοσφαίρια είναι Rh-Θετικά ή Rh (+), ενώ αυτά
+που δεν το έχουν είναι Rh-Αρνητικά ή Rh (-). Το αντιγόνο D είναι εξαιρετικά ανοσογόνο
+(immunogenic) και άτομα Rh-Αρνητικά, όταν εκτεθούν σε αυτό, μπορούν να σχηματίσουν
+anti-D αντισώματα. Το 85\% των λευκών ανθρώπων έχουν τον παράγοντα αυτό, δηλαδή είναι
+Rh-Θετικοί και το 15\% δεν το έχουν, δηλαδή είναι Rh-Αρνητικοί. Βάση όσων έχουν αναφερθεί παραπάνω, στο σχήμα \ref{fig:blood_compatibility} βλέπουμε την συμβατότητα των διάφορων συνδυασμών:
+	\begin{figure}[h!]
+	    \centering
+	    \includegraphics[width=0.5\textwidth]{blood_compatibility.jpg}
+	    \caption{Συμβατότητα ομάδων αίματος}
+	    \label{fig:blood_compatibility}
+	\end{figure}
+	
+	Από την άλλη μεριά η μετάγγιση πλάσματος έχει τους αντίθετους κανόνες αφού τα αντιγόνα βρίσκονται στο πλάσμα. Για παράδειγμα ένας ασθενής με τύπο αίματος O μπορεί να λάβει πλάσμα από τις ομάδες αίματος A,B και ΑΒ αφού το πλάσμα του τύπου Ο περιέχει αντιγόνα και της Α και της Β. Στον πίνακα \ref{tab:plasma_compatibility} βλέπουμε τη συμβατότητα πλάσματος των διάφορων συνδυασμών:
+\begin{table}[H]
+	\centering
+	\begin{tabular}{l|llll}
+		Ασθενής & \multicolumn{4}{l}{Αιμοδότης} \\ \hline
+			& Ο     & Α     & Β     & ΑΒ    \\
+		Ο       & Ναι   & Ναι   & Ναι   & Ναι   \\
+		Α       & Όχι   & Ναι   & Όχι   & Ναι   \\ 
+		Β       & Όχι   & Όχι   & Ναι   & Ναι   \\
+		ΑΒ      & Όχι   & Όχι   & Όχι   & Ναι  
+	\end{tabular}
+	\caption{Συμβατότητα πλάσματος}
+	\label{tab:plasma_compatibility}
+\end{table}
+	\subsection{Αιμοδοσία}
 	Με τον όρο αιμοδοσία εννοούμε τη χορήγηση αίματος από υγιείς δότες σε άτομα στα
 οποία η κατάσταση της υγείας τους απαιτεί μετάγγιση. Κατ' επέκταση με τον όρο αιμοδοσία εννοούμε την όλη οργάνωση που ασχολείται με τη λήψη, επεξεργασία, συντήρηση και διάθεση του αίματος και των Παραγώγων του \cite{bloodDonationDefinition}. Η αιμοδοσία καλείται εθελοντική, επειδή αφορά σε πράξη που εκτελεί κάποιος με τη θέλησή του και με μοναδικά κίνητρα αισθήματα αλληλεγγύης και αλτρουισμού \cite{1973}. 
 
 Ως επιστημονικός τομέας, η αιμοδοσία αποτελεί ιδιαίτερο κλάδο της αιματολογίας με τεράστια ανάπτυξη τα τελευταία 20 χρόνια. Η ανάπτυξη της αιμοδοσίας ως εξειδικευμένου τομέα, καθώς και η αλματώδης ανάπτυξή της, οδήγησαν στην ανάγκη να πλαισιώνεται από ιατρικό, νοσηλευτικό και τεχνικό προσωπικό υψηλής στάθμης με εξειδίκευση στον τομέα της
 αιμοδοσίας.  
 	
-	Η μετάγγιση αίματος γίνεται τακτικά σε εγχειρήσεις, τραυματίες, γαστρορραγίες και σε τοκετούς για την αναπλήρωση της απώλειας σημαντικής ποσότητας αίματος. Ακόμα, σε μερικές γενετικές διαταραχές, όπως αιμορροφιλία, η μεσογειακή αναιμία η οποία επηρεάζει το σχήμα των ερυθροκυττάρων και αυτό συνεπάγεται μείωση της λειτουργικότητας και συνακόλουθη καταστροφή τους. Ακόμη, σε ασθενείς με χρόνια νοσήματα όπως λευχαιμία, χρόνια νεφρική ανεπάρκεια, κακοήθεια. Τα άτομα που πάσχουν από αυτές τις διαταραχές χρειάζονται τακτικές μεταγγίσεις ασφαλούς αίματος και παραγώγων (πλάσμα, αιμοπετάλια) για την αναπλήρωση των παθολογικών συστατικών του αίματος τους.
+	Η μετάγγιση αίματος γίνεται τακτικά σε εγχειρήσεις, τραυματίες, γαστρορραγίες και σε τοκετούς για την αναπλήρωση της απώλειας σημαντικής ποσότητας αίματος. Στις περισσότερες περιπτώσεις η μετάγγιση αίματος χρησιμοποιείται ως προσωρινή μορφή θεραπείας. Σε αυτές τις περιπτώσεις ο ασθενής χρειάζεται αρκετές μονάδες αίματος αλλά μόλις η κατάσταση του θεωρηθεί εκτός κινδύνου, δεν χρειάζεται περεταίρω μετάγγιση αίματος. Βέβαια, υπάρχουν και περιπτώσεις όπου ο ασθενής χρειάζεται μεταγγίσεις αίματος εφόρου ζωής. Μερικές ευρέως γνωστές ασθένειες που απαιτούν κάτι τέτοιο είναι η Β-Θαλασσαιμία (η Ελλάδα έχει τα υψηλότερα ποσοστά), αιμοφιλία και λευχαιμία \cite{thalassaemiaLongTerm}.
+
+	Αν και υπάρχουν κάποιες περιπτώσεις οι οποίες απαιτούν μετάγγιση ολικού αίματος, η πλειονότητα του αίματος διασπάται μετά την δωρεά και τα απαιτούμενα προϊόντα αίματος μεταφέρονται στον ασθενή. Ακολουθώντας την παραπάνω προσέγγιση, από την μία μεριά ο ασθενής δεν λαμβάνει περιττά συστατικά και από την άλλη μεριά από μία μονάδα ολικού αίματος μπορούν να επωφεληθούν περισσότερα του ενός ατόμου. Η διάρκεια ζωής των διάφορων συστατικών του αίματος φαίνονται στον πίνακα \ref{tab:blood-shelf-life} παρακάτω \cite{Basu2014}:
+	
+\begin{table}[H]
+		\centering
+		\begin{tabular}{l|ll}
+			\hline
+			Συστατικό          & Διάρκεια  & Θερμοκρασία \\ \hline
+			Ολικό αίμα         & 24 ώρες   & 20-24       \\
+			Ερυθρά αιμσοφαίρια & 42 μέρες  & 4           \\
+			Αιμοπετάλια        & 3-5 μέρες & 20-24       \\
+			Πλάσμα             & 1 χρόνος  & -18        
+		\end{tabular}
+		\caption{Διάρκεια ζωής συστατικών αίματος}
+		\label{tab:blood-shelf-life}
+\end{table}	
+
+Από τα δεδομένα του παραπάνω πίνακα γίνεται εύκολα εμφανές ότι είναι προτιμότερο να αποθηκευόνται τα συστατικά του αίματος πάρα το ολικό αίμα, ενώ παράλληλα γίνεται εμφανής η ανάγκη για συνεχή παροχή αιμοδοσιών.
 	
 	 Το αίμα που χρησιμοποιείται στις μεταγγίσεις πρέπει να προέρχεται από υγιή άτομα. Το αίμα δεν είναι μόνο ζωντανός ιστός, αλλά έχει επιπλέον την ιδιότητα να ανανεώνεται και τα υγιή άτομα διαθέτουν μηχανισμούς αύξησης της παραγωγής αίματος. Έτσι με την αιμοδοσία προσφέρεται εύκολα το δώρο της ζωής χωρίς το φόβο ότι η τακτική αιμοδοσία θα προκαλέσει εξασθένηση του οργανισμού και θα οδηγήσει σε αδυναμία η επιτάχυνση της γήρανσης.
 	 
