--- a/references.bib
+++ b/references.bib
@@ -12,6 +12,27 @@
   Timestamp                = {2015.09.23}
 }
 
+@Article{Basu2014,
+  Title                    = {Overview of blood components and their preparation},
+  Author                   = {Basu, Debdatta and Kulkarni, Rajendra},
+  Journal                  = {Indian Journal of Anaesthesia},
+  Year                     = {2014},
+  Number                   = {5},
+  Pages                    = {529--537},
+  Volume                   = {58},
+
+  __markedentry            = {[ilias:6]},
+  Abstract                 = {The whole blood which is a mixture of cells, colloids and crystalloids can be separated into different blood components namely packed red blood cell (PRBC) concentrate, platelet concentrate, fresh frozen plasma and cryoprecipitate. Each blood component is used for a different indication; thus the component separation has maximized the utility of one whole blood unit. Different components need different storage conditions and temperature requirements for therapeutic efficacy. A variety of equipments to maintain suitable ambient conditions during storage and transportation are in vogue. The blood components being foreign to a patient may produce adverse effects that may range from mild allergic manifestations to fatal reactions. Such reactions are usually caused by plasma proteins, leucocytes, red cell antigens, plasma and other pathogens. To avoid and reduce such complications, blood products are modified as leukoreduced products, irradiated products, volume reduced products, saline washed products and pathogen inactivated products. The maintenance of blood inventory forms a major concern of blood banking particularly of rare blood groups routinely and common blood groups during disasters. PRBCs can be stored for years using cryopreservation techniques. New researches in red cell cultures and blood substitutes herald new era in blood banking.},
+  Address                  = {India},
+  Comment                  = {IJA-58-529[PII]
+25535413[pmid]},
+  ISSN                     = {0976-2817},
+  Owner                    = {ilias},
+  Publisher                = {Medknow Publications \& Media Pvt Ltd},
+  Timestamp                = {2015.10.04},
+  Url                      = {http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4260297/}
+}
+
 @Article{Borgman2012,
   Title                    = {The conundrum of sharing research data},
   Author                   = {Borgman, Christine L.},
@@ -27,6 +48,17 @@
   Owner                    = {ilias},
   Timestamp                = {2015.09.29},
   Url                      = {http://dx.doi.org/10.1002/asi.22634}
+}
+
+@Electronic{bloodPlasma,
+  Title                    = {What Is Plasma},
+  Author                   = {Bowers, Nancy},
+  Language                 = {English},
+  Organization             = {University of Rochester},
+  Url                      = {https://www.urmc.rochester.edu/encyclopedia/content.aspx?ContentTypeID=160&ContentID=37},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.04}
 }
 
 @InProceedings{1019587,
@@ -80,6 +112,7 @@
   Number                   = {6},
   Pages                    = {1188--1196},
   Volume                   = {51},
+
   Bdsk-url-1               = {http://dx.doi.org/10.1111/j.1537-2995.2010.02989.x},
   ISSN                     = {1537-2995},
   Owner                    = {ilias},
@@ -102,6 +135,17 @@
   ISSN                     = {1537-2995},
   Publisher                = {Blackwell Science Inc},
   Url                      = {http://dx.doi.org/10.1111/j.0041-1132.2004.04402.x}
+}
+
+@Book{dawkins,
+  Title                    = {How a Scientist Changed the Way We Think},
+  Author                   = {Richard Dawkins},
+  Editor                   = {Alan Grafen},
+  Publisher                = {Oxford University Press},
+  Year                     = {2007},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.04}
 }
 
 @Article{VOX:VOX5295,
@@ -198,6 +242,17 @@
   Timestamp                = {2015.09.14}
 }
 
+@Book{textbookOfMedicine,
+  Title                    = {Textbook of Medicine},
+  Author                   = {Lee Goldman},
+  Editor                   = {J. Claude Bennett},
+  Publisher                = {Saunders},
+  Year                     = {2000},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.04}
+}
+
 @Article{filloKivernisews,
   Title                    = {Ministerial directive Υ4γ-ΟΙΚ.121672-2009},
   Author                   = {Government of Greece},
@@ -216,8 +271,6 @@
   Number                   = {1},
   Pages                    = {88--88},
   Volume                   = {36},
-
-  __markedentry            = {[ilias:]},
   Bdsk-url-1               = {http://dx.doi.org/10.1111/j.1537-2995.1996.tb05248.x},
   ISSN                     = {1537-2995},
   Owner                    = {ilias},
@@ -235,6 +288,17 @@
   Bdsk-url-1               = {https://www.grnet.gr/en/node/400},
   Owner                    = {ilias},
   Timestamp                = {2015.09.27}
+}
+
+@Electronic{bloodVolume,
+  Title                    = {Volume of Blood in a Human},
+  Author                   = {LanNa Lee},
+  Language                 = {English},
+  Url                      = {http://hypertextbook.com/facts/1998/LanNaLee.shtml},
+  Year                     = {1998},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.04}
 }
 
 @Article{Lemmens2005,
@@ -281,7 +345,7 @@
   Pages                    = {368--372},
   Volume                   = {38},
 
-  __markedentry            = {[ilias:6]},
+  __markedentry            = {[ilias:]},
   ISSN                     = {1537-2995},
   Owner                    = {ilias},
   Publisher                = {Blackwell Science Ltd},
@@ -382,6 +446,21 @@
   Timestamp                = {2015.10.03}
 }
 
+@Article{Stainsby01092000,
+  Title                    = {Management of massive blood loss: a template guideline},
+  Author                   = {Stainsby, D. and MacLennan, S. and Hamilton, P. J.},
+  Journal                  = {British Journal of Anaesthesia},
+  Year                     = {2000},
+  Number                   = {3},
+  Pages                    = {487-491},
+  Volume                   = {85},
+
+  Abstract                 = {The management of acute massive blood loss is considered and a template guideline is formulated, supported by a review of the key literature and current evidence. It is emphasized that, if avoidable deaths are to be prevented, surgeons, anaesthetists, haematologists and blood‐bank staff need to communicate closely in order to achieve the goals of secure haemostasis, restoration of circulating volume, and effective management of blood component replacement.Br J Anaesth 2000; 85: 487–91},
+  Doi                      = {10.1093/bja/85.3.487},
+  Eprint                   = {http://bja.oxfordjournals.org/content/85/3/487.full.pdf+html},
+  Url                      = {http://bja.oxfordjournals.org/content/85/3/487.abstract}
+}
+
 @Article{FQS511,
   Title                    = {Central Questions of Anonymization: A Case Study of Secondary Use of Qualitative Data},
   Author                   = {Denise Thomson and Lana Bzdel and Karen Golden-Biddle and Trish Reay and Carole Estabrooks},
@@ -396,6 +475,18 @@ URN: urn:nbn:de:0114-fqs0501297},
   ISSN                     = {1438-5627},
   Keywords                 = {ethical practice; collaborative research; confidentiality; privacy},
   Url                      = {http://www.qualitative-research.net/index.php/fqs/article/view/511}
+}
+
+@Electronic{thalassaemiaLongTerm,
+  Title                    = {Thalassaemia},
+  Author                   = {Colin Tidy},
+  Language                 = {English},
+  Organization             = {patient.info},
+  Url                      = {http://patient.info/health/thalassaemia-leaflet},
+  Year                     = {2015},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.04}
 }
 
 @InProceedings{6249994,
