--- a/thesis.tex
+++ b/thesis.tex
@@ -8,6 +8,9 @@
 \usepackage{textcomp}
 \usepackage{color}
 \usepackage{listings}
+\usepackage{float}
+\restylefloat{table}
+
 
 %----------------------------------------------------------------------------------------
 %	LISTINGS (CODE) TEMPLATE4$  $
