About blood 2nd Draft

--- a/blood_donation.tex
+++ b/blood_donation.tex
@@ -52,7 +52,18 @@
 που δεν το έχουν είναι Rh-Αρνητικά ή Rh (-). Το αντιγόνο D είναι εξαιρετικά ανοσογόνο
 (immunogenic) και άτομα Rh-Αρνητικά, όταν εκτεθούν σε αυτό, μπορούν να σχηματίσουν
 anti-D αντισώματα. Το 85\% των λευκών ανθρώπων έχουν τον παράγοντα αυτό, δηλαδή είναι
-Rh-Θετικοί και το 15\% δεν το έχουν, δηλαδή είναι Rh-Αρνητικοί. Βάση όσων έχουν αναφερθεί παραπάνω, στο σχήμα \ref{fig:blood_compatibility} βλέπουμε την συμβατότητα των διάφορων συνδυασμών:
+Rh-Θετικοί και το 15\% δεν το έχουν, δηλαδή είναι Rh-Αρνητικοί. 
+
+Συμβάντα μπορεί να παρατηρηθούν, αν δεν προσδιοριστεί ο παράγοντας Rhesus, στις εξής
+περιπτώσεις.
+\begin{enumerate}
+	\item Σε άτομα στα οποία έγινε μια πρώτη μετάγγιση και στα οποία μια δεύτερη μετάγγιση μπορεί να είναι θανατηφόρα
+	\item Στις γυναίκες στις οποίες γίνεται μετάγγιση κατά τη διάρκεια της εγκυμοσύνης τους
+	\item Στις γυναίκες που γέννησαν ήδη το πρώτο τους παιδί και στις οποίες μετά από λίγο γίνεται μετάγγιση
+	\item Στα έμβρυα λόγω του παράγοντα Ρέζους μπορεί να προκληθεί μια πολύ σοβαρή πάθηση που λέγεται ερυθροβλάστωση των εμβρύων (αν η μητέρα είναι Ρέζους αρνητική, ο πατέρας Ρέζους θετικός και το έμβρυο επίσης Ρέζους θετικό). Κατά την αρρώστια αυτή τα αιμοσφαίρια του εμβρύου συγκολλούνται και προκαλείται τελικά ο θάνατος του. Μπορεί να σωθεί μόνο, αν γεννηθεί ζωντανό και γίνει αλλαγή του αίματος του (αφαιμαξομετάγγιση) με άλλο αίμα Ρέζους αρνητικό
+\end{enumerate}
+
+Βάση όσων έχουν αναφερθεί παραπάνω, στο σχήμα \ref{fig:blood_compatibility} βλέπουμε την συμβατότητα των διάφορων συνδυασμών.
 	\begin{figure}[h!]
 	    \centering
 	    \includegraphics[width=0.5\textwidth]{blood_compatibility.jpg}
@@ -60,7 +71,7 @@ Rh-Θετικοί και το 15\% δεν το έχουν, δηλαδή είνα
 	    \label{fig:blood_compatibility}
 	\end{figure}
 	
-	Από την άλλη μεριά η μετάγγιση πλάσματος έχει τους αντίθετους κανόνες αφού τα αντιγόνα βρίσκονται στο πλάσμα. Για παράδειγμα ένας ασθενής με τύπο αίματος O μπορεί να λάβει πλάσμα από τις ομάδες αίματος A,B και ΑΒ αφού το πλάσμα του τύπου Ο περιέχει αντιγόνα και της Α και της Β. Στον πίνακα \ref{tab:plasma_compatibility} βλέπουμε τη συμβατότητα πλάσματος των διάφορων συνδυασμών:
+	Από την άλλη μεριά η μετάγγιση πλάσματος έχει τους αντίθετους κανόνες αφού τα αντιγόνα βρίσκονται στο πλάσμα. Για παράδειγμα ένας ασθενής με τύπο αίματος O μπορεί να λάβει πλάσμα από τις ομάδες αίματος A,B και ΑΒ αφού το πλάσμα του τύπου Ο περιέχει αντιγόνα και της Α και της Β. Στον πίνακα \ref{tab:plasma_compatibility} βλέπουμε τη συμβατότητα πλάσματος των διάφορων συνδυασμών.
 \begin{table}[H]
 	\centering
 	\begin{tabular}{l|llll}
@@ -74,6 +85,14 @@ Rh-Θετικοί και το 15\% δεν το έχουν, δηλαδή είνα
 	\caption{Συμβατότητα πλάσματος}
 	\label{tab:plasma_compatibility}
 \end{table}
+	Σε αυτό το σημείο θα πρέπει να αναφερθεί ότι η κατανομή του πληθυσμού στις διάφορες ομάδες αίματος δεν είναι ισόποση. Στο σχήμα \ref{fig:blood_distribution} βλέπουμε την κατανομή σε επιλεγμένες χώρες.
+\begin{figure}[h!]
+	    \centering
+	    \includegraphics[width=0.7\textwidth]{blood_distribution.jpg}
+	    \caption{Κατανομή ομάδων αίματος}
+	    \label{fig:blood_distribution}
+\end{figure}	
+
 	\subsection{Αιμοδοσία}
 	Με τον όρο αιμοδοσία εννοούμε τη χορήγηση αίματος από υγιείς δότες σε άτομα στα
 οποία η κατάσταση της υγείας τους απαιτεί μετάγγιση. Κατ' επέκταση με τον όρο αιμοδοσία εννοούμε την όλη οργάνωση που ασχολείται με τη λήψη, επεξεργασία, συντήρηση και διάθεση του αίματος και των Παραγώγων του \cite{bloodDonationDefinition}. Η αιμοδοσία καλείται εθελοντική, επειδή αφορά σε πράξη που εκτελεί κάποιος με τη θέλησή του και με μοναδικά κίνητρα αισθήματα αλληλεγγύης και αλτρουισμού \cite{1973}. 
@@ -143,7 +162,7 @@ Rh-Θετικοί και το 15\% δεν το έχουν, δηλαδή είνα
 
 Η ευρύτατη εφαρμογή των μεταγγίσεων, σε συνάρτηση με τις δυσκολίες εξασφάλισης των απαιτούμενων ποσοτήτων αίματος για την κάλυψη των αναγκών, δημιουργούν ένα οξύ ιατρο-κοινωνικό πρόβλημα το οποίο απασχολεί τους υπέυθυνους φορείς υγείας ανά τον κόσμο. Η έλλειψη αίματος συνεπάγεται αναβολές χειρουργικών επεμβάσεων, παράταση της παραμονής των ασθενών στα νοσοκομεία, απώλεια εισοδημάτων από την επιβράδυνση της θεραπείας, καθώς και ευρύτερες ψυχολογικές και κοινωνικές επιπτώσεις, οι οποίες επιβαρύνουν τόσο τους ίδιους τους ασθενείς, όσο και το οικογενειακό τους περιβάλλον. Η αντιμετώπιση του προβλήματος απαιτεί την εφαρμογή Εθνικής Αιμοδοτικής Πολιτικής, που στηριζόμενη σε αρχές μη κερδοσκοπικού μάρκετινγκ, θα αποσκοπεί κυρίως στην ενημέρωση και την ευαισθητοποίηση του κοινού ως προς την εθελοντική αιμοδοσία \cite{Politis} \cite{Marantidou2007}.
 
-Επομένως, η προσπάθεια του συστήματος αιμοδοσίας στην Ελλάδα πρέπει να έχει δύο βασικούς στόχους οι οποίοι και ταυτίζονται με τους στόχους του συστήματος μας όπως περιγράφηκαν στο κεφάλαιο 1 της παρούσας διπλωματικη εργασίας.
+Επομένως, η προσπάθεια του συστήματος αιμοδοσίας στην Ελλάδα πρέπει να έχει δύο βασικούς στόχους οι οποίοι και ταυτίζονται με τους στόχους του συστήματος μας όπως περιγράφηκαν στο κεφάλαιο 1 της παρούσας διπλωματική εργασίας.
 \begin{enumerate}
 	\item Τη συνολική αύξηση των μονάδων αίματος που συλλέγονται για να διασφαλιστεί η αυτάρκεια στην παροχή αίματος 
 	\item Τη μετατροπή των αιμοδοτών αντικατάστασης σε τακτικούς εθελοντές αιμοδότες, προκειμένου να αυξηθεί η ασφάλεια του αίματος και να διευκολυνθεί η διαχείριση των διαθέσιμων μονάδων αίματος και των παραγώγων του
