Red cells 1st Draft

--- a/blood_donation.tex
+++ b/blood_donation.tex
@@ -17,7 +17,9 @@
 	 
 	Το πλάσμα αποτελεί το μεγαλύτερο και κύριο συστατικό του αίματος, καταλαμβάνοντας το 55\% του συνολικού όγκου του. Είναι ένα υποκίτρινο υγρό μέσω του οποίου μεταφέρονται αιμοσφαίρια, πρωτεΐνες και άλλες ουσίες. Αποτελείται κατά 91,5\% από νερό, κατά 7\% από πρωτεΐνες, όπως η λευκωματίνη (αλβουμίνη), οι σφαιρίνες και το ινωδογόνο, και κατά 1,5\% από άλλες ουσίες, όπως θρεπτικά συστατικά, ορμόνες, αναπνευστικά αέρια, ηλεκτρολύτες, βιταμίνες και άχρηστες αζωτούχες ουσίες \cite{bloodPlasma}. Η κύρια λειτουργία που επιτελεί είναι η μεταφορά υγρών και υδατοδιάλυτων ουσιών όπως είναι οι ορμόνες και βασικές .
 
-	Το υπόλοιπο 45\% του αίματος αποτελείται από αιμοσφαίρια και κυρίως ερυθρά αιμσοφαίρια, λευκά αιμοσφαίρια και αιμοπετάλια. Στο σχήμα \ref{fig:blood_cells_characteristics} παρακάτω βλέπουμε τα βασικά χαρακτηριστικά για τα κύτταρα του αίματος.
+	Το υπόλοιπο 45\% του αίματος αποτελείται από αιμοσφαίρια και κυρίως ερυθρά αιμσοφαίρια, λευκά αιμοσφαίρια και αιμοπετάλια. Τα ερυθρά αιμοσφαίρια είναι τα πιο πολυάριθμα κύτταρα σε κυκλοφορία και δίνουν στο αίμα το χαρακτηριστικό κόκκινο χρώμα του. Τα ερυθρά αιμοσφαίρια χρησιμοποιούνται ευρέως, για να αναπληρώνουν την απώλεια αίματος που προκαλείται από αιμορραγία κατά τη γέννα, κατά τη διάρκεια χειρουργικής επέμβασης και κατά τη διάρκεια ατυχημάτων. Η μετάγγιση ερυθρών αιμοσφαιρίων μπορεί επίσης να είναι σωτήρια για τη ζωή του ασθενούς σε συγκεκριμένους τύπους αναιμίας. Η λειτουργία τους αφορά τη διατήρηση των ιστών στη ζωή καθώς μεταφέρουν σε αυτούς οξυγόνο και απομακρύνουν το διοξείδιο του άνθρακα. Η εκατοστιαία αναλογία ερυθρών αιμοσφαιρίων ανά μονάδα όγκου αίματος ονομάζεται αιματοκρίτης.
+	
+	Στο σχήμα \ref{fig:blood_cells_characteristics} παρακάτω βλέπουμε τα βασικά χαρακτηριστικά για τα κύτταρα του αίματος.
 \begin{figure}[H]
 	    \centering
 	    \includegraphics[width=0.7\textwidth]{blood_cells_characteristics.jpg}
